fixed text overflow issue

--- a/frontend/src/metabase/css/admin.css
+++ b/frontend/src/metabase/css/admin.css
@@ -154,6 +154,7 @@
   border: var(--border-size) var(--border-style) transparent;
   border-radius: var(--default-border-radius);
   margin-bottom: 0.25em;
+  word-break: break-all;
 }
 
 .AdminList-item.selected {
